manifests/ci-cd/gitlab/registry-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitlab-registry
  namespace: system-cicd
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  parentRefs:
    - name: main-gateway
      namespace: system-ingress
      sectionName: websecure
  hostnames:
    - registry.urosevicvuk.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: gitlab-registry
          port: 5000
